--- a/src/sass/module/_about-us.scss
+++ b/src/sass/module/_about-us.scss
@@ -1,9 +1,5 @@
 @use "global" as *;
 
-.about-us {
-  position: relative;
-}
-
 .about-us__inner {
   max-width: rem(500);
   width: 100%;
@@ -17,10 +13,7 @@
 .about-us__img-wrapper {
   display: flex;
   flex-direction: row;
-
-  @include mq("md") {
-    position: relative;
-  }
+  position: relative;
 }
 
 //ボタン周り
@@ -60,25 +53,33 @@
 }
 
 .about-us__main-text {
+  position: absolute;
   font-size: rem(40);
   line-height: 1;
   font-family: $title-font-family;
-  color: $green;
+  color: $white;
+  top: rem(49);
+  left: calc(50% - min(39.8vw, 9.3rem));
 
   @include mq("md") {
     font-size: rem(80);
     line-height: 1.2;
-    color: $white;
+    top: rem(-68);
+    left: rem(9);
   }
 }
 
 .about-us__text {
-  margin-top: rem(16);
   font-weight: $regular;
 
   @include mq("md") {
-    margin-top: rem(0);
+    position: absolute;
+    max-width: rem(400);
+    width: 100%;
+    top: rem(-45);
+    right: rem(-7);
   }
+
 }
 
 //about us背景画像左側
@@ -129,6 +130,77 @@
 }
 
 .about-us__img-right>img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  object-fit: cover;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  background: rgba(20, 20, 20, 80%);
+  overflow: auto;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+  box-sizing: border-box;
+  z-index: 10;
+}
+
+/*モーダル本体の擬似要素の指定*/
+.modal:before {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  height: 100%;
+}
+
+/*モーダル本体に「active」クラス付与した時のスタイル*/
+.modal.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+/*モーダル枠の指定*/
+.modal__body {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  width: 100%;
+  height: 100vh;
+  overscroll-behavior: contain;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal__content {
+  background: transparent;
+  max-width: rem(920);
+  width: 100%;
+  height: auto;
+  position: relative;
+  aspect-ratio: 920/588;
+}
+
+.modal__content--large {
+  aspect-ratio: 492/760;
+  max-width: rem(330);
+
+  @include mq("md") {
+    max-width: rem(500);
+  }
+
+}
+
+.modal__content>img {
   position: absolute;
   width: 100%;
   height: 100%;
