--- a/src/sass/module/_blog-cards.scss
+++ b/src/sass/module/_blog-cards.scss
@@ -1,16 +1,21 @@
 @use "global" as *;
+
 .blog-cards {
   display: grid;
   grid-template-columns: 1fr;
   margin-top: rem(28);
   gap: rem(40);
+
   @include mq("md") {
     grid-template-columns: repeat(3, 1fr);
     margin-top: rem(80);
   }
 }
+
 .blog-cards--blog-page {
-  margin-top: rem(80);
+  margin-top: rem(50);
+  gap: rem(37);
+
   @include mq("md") {
     grid-template-columns: repeat(2, 1fr);
     margin-top: rem(180);
