--- a/src/sass/module/_gallery.scss
+++ b/src/sass/module/_gallery.scss
@@ -1,46 +1,25 @@
 @use "global" as *;
 
 .gallery__photo-wrapper {
-    position: relative;
     margin-top: rem(40);
     display: flex;
     flex-direction: column;
-    gap: 0;
+    gap: rem(8);
 
     @include mq("md") {
         margin-top: rem(80);
-        gap: rem(8);
     }
 }
 
-.gallery__photo-wrapper::before {
-    display: none;
-
-    @include mq("md") {
-        position: absolute;
-        content: "";
-        display: block;
-        background-image: url(/assets/images/common/contact-fish.png);
-        right: calc(50% - min(46.4vw, 10.8rem));
-        width: 100%;
-        background-size: contain;
-        background-repeat: no-repeat;
-        z-index: -1;
-        top: rem(-40);
-        max-width: rem(301);
-        height: rem(138);
-    }
-}
 
 .gallery__photo {
     display: flex;
     flex-direction: column;
-    gap: 0;
+    gap: rem(8);
     align-items: center;
 
     @include mq("md") {
         flex-direction: row;
-        gap: rem(8);
         align-items: initial;
     }
 }
@@ -57,6 +36,7 @@
     @include mq("md") {
         aspect-ratio: 746/492;
         max-width: rem(492);
+        cursor: pointer;
     }
 }
 
@@ -74,12 +54,12 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 0;
+    gap: rem(8);
     align-items: center;
 
     @include mq("md") {
-        width: 50%;
-        gap: rem(8);
+        width: 54%;
+        cursor: pointer;
     }
 }
 
