--- a/src/sass/page/_blog-layout.scss
+++ b/src/sass/page/_blog-layout.scss
@@ -1,5 +1,9 @@
 @use "global" as *;
 
+.blog-layout {
+  max-width: rem(366);
+}
+
 .blog-layout__2column {
   position: relative;
   display: flex;
@@ -15,17 +19,18 @@
   content: "";
   display: block;
   background-image: url(/assets/images/common/decoration-fish-right.svg);
-  top: rem(-10);
-  left: calc(50% - min(46.4vw, 10.8rem));
-  max-width: rem(109);
+  top: rem(27);
+  left: calc(50% - min(45.5vw, 10.7rem));
+  max-width: rem(117);
   width: 100%;
-  height: rem(50);
+  height: rem(55);
   background-size: contain;
   background-repeat: no-repeat;
+  z-index: -1;
 
   @include mq("md") {
-    top: rem(-40);
-    left: calc(50% - min(46.4vw, 42rem));
+    top: rem(-69);
+    left: calc(50% - min(43.1vw, 38.8rem));
     max-width: rem(301);
     height: rem(138);
   }
