--- a/src/sass/page/_footer-wrapper.scss
+++ b/src/sass/page/_footer-wrapper.scss
@@ -21,3 +21,11 @@
     margin-top: rem(151);
   }
 }
+
+.footer-wrapper--contact {
+  margin-top: rem(144);
+
+  @include mq("md") {
+    margin-top: rem(119);
+  }
+}
