--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -11,6 +11,11 @@
   opacity: 1;
 }
 
+.blog-card--blog-page {
+  padding-right: rem(18);
+  padding-left: rem(18);
+}
+
 .blog-card__img-wrapper {
   overflow: hidden;
 }
@@ -41,6 +46,10 @@
   margin-top: rem(17);
 }
 
+.blog-card__body--blog-page {
+  margin-top: rem(20);
+}
+
 .blog-card__title {
   overflow-wrap: anywhere;
   font-size: rem(16);
@@ -48,8 +57,9 @@
   border-bottom: solid rem(1) $green;
   font-weight: $bold;
   flex-shrink: 0;
-  margin-top: rem(2);
-  padding-bottom: rem(4);
+  padding-bottom: rem(3);
+
+  @include mq("md") {}
 }
 
 .blog-card__text {
