--- a/src/sass/module/_blog-article.scss
+++ b/src/sass/module/_blog-article.scss
@@ -3,9 +3,11 @@
 .blog-article {
     position: relative;
     margin-top: rem(43);
+    width: 100%;
 
     @include mq("md") {
-        margin-top: rem(150);
+        margin-top: rem(147);
+        width: 92%;
     }
 
 }
@@ -19,8 +21,14 @@
 }
 
 .blog-article__time {
+    margin-top: rem(5);
     font-size: rem(14);
     font-family: $title-font-family;
+    display: block;
+
+    @include mq("md") {
+        margin-top: rem(0);
+    }
 }
 
 .blog-article__title {
@@ -31,6 +39,8 @@
 
     @include mq("md") {
         font-size: rem(32);
+        margin-top: rem(5);
+        padding-bottom: 0;
     }
 }
 
@@ -40,16 +50,16 @@
     display: block;
     background-image: url(/assets/images/common/decoration-fish-right.svg);
     top: rem(-16);
-    left: calc(50% - min(44.4vw, 10.8rem));
-    max-width: rem(109);
+    left: calc(50% - min(46.4vw, 11rem));
+    max-width: rem(122);
     width: 100%;
-    height: rem(50);
+    height: rem(56);
     background-size: contain;
     background-repeat: no-repeat;
 
     @include mq("md") {
-        top: rem(-40);
-        left: calc(50% - min(46.4vw, 42rem));
+        top: rem(-71);
+        left: calc(50% - min(29.8vw, 26.8rem));
         max-width: rem(301);
         height: rem(138);
     }
@@ -103,32 +113,6 @@
     margin-top: rem(40);
 
     @include mq("md") {
-        margin-top: rem(80);
+        margin-top: rem(77);
     }
-}
-
-.blog-article__pager {
-    display: flex;
-    flex-direction: row;
-    gap: rem(82);
-    justify-content: center;
-}
-
-.blog-article__pager-before,
-.blog-article__pager-after {
-    display: inline-block;
-    width: rem(38);
-    height: rem(38);
-    background-color: $white;
-    border: solid rem(1) $green;
-    text-align: center;
-    line-height: 1;
-    padding: rem(11) rem(15);
-}
-
-.blog-article__pager-before:hover,
-.blog-article__pager-after:hover {
-    background-color: $green;
-    color: $white;
-    transition: ease 0.3s;
 }
