--- a/src/sass/module/_price.scss
+++ b/src/sass/module/_price.scss
@@ -32,7 +32,6 @@
 .price__menu {
   width: 100%;
   margin-top: rem(40);
-  align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -58,6 +57,8 @@
   width: 100%;
   padding: rem(8) 0;
   max-width: rem(540);
+  height: auto;
+
 
   @include mq("md") {
     padding: 0;
@@ -83,6 +84,7 @@
 .price__lists {
   width: 100%;
   max-width: rem(540);
+  align-items: center;
 
   @include mq("md") {
     width: 100%;
