--- a/src/sass/module/_sidebar.scss
+++ b/src/sass/module/_sidebar.scss
@@ -2,22 +2,39 @@
 
 .sidebar-wrapper {
   margin-top: rem(80);
+  width: 100%;
 
   @include mq("md") {
-    margin-top: rem(150);
+    margin-top: rem(149);
+    width: 65%;
+  }
+}
+
+.sidebar-wrapper--blog-article {
+  @include mq("md") {
+    margin-top: rem(149);
+    width: 40%;
   }
 }
 
 .sidebar__inner {
-  padding: 0 rem(21);
+  padding: 0 rem(24);
+
+  @include mq("md") {
+    padding: 0 0 0 rem(14);
+  }
+}
+
+.sidebar__inner-blog {
+  padding: 0 rem(23);
+
+  @include mq("md") {
+    padding: 0 0 0 rem(14);
+  }
 }
 
 .sidebar {
   width: 100%;
-
-  @include mq("md") {
-    width: 49%;
-  }
 }
 
 .sidebar__title {
@@ -46,7 +63,7 @@
   margin-top: rem(24);
   display: flex;
   flex-direction: column;
-  gap: rem(24);
+  gap: rem(23);
 }
 
 .sidebar__popular-card {
@@ -89,10 +106,16 @@
   font-size: rem(16);
 }
 
-.sidebar__reviews-wrapper,
-.sidebar__campaign-wrapper,
-.sidebar__archive-wrapper {
-  margin-top: rem(83);
+.sidebar__reviews-wrapper {
+  margin-top: rem(79);
+
+  @include mq("md") {
+    margin-top: rem(85);
+  }
+}
+
+.sidebar__reviews-wrapper--blog {
+  margin-top: rem(86);
 }
 
 .sidebar__reviews-card {
@@ -101,8 +124,20 @@
 }
 
 .sidebar__reviews-info {
-  margin-top: rem(16);
+  margin-top: rem(14);
   font-size: rem(12);
+
+  @include mq("md") {
+    margin-top: rem(18);
+  }
+}
+
+.sidebar__reviews-info--blog {
+  margin-top: rem(22);
+
+  @include mq("md") {
+    margin-top: rem(18);
+  }
 }
 
 .sidebar__reviews-title {
@@ -126,8 +161,20 @@
 }
 
 .sidebar__btn-wrapper {
-  margin-top: rem(40);
+  margin-top: rem(43);
   text-align: center;
+
+  @include mq("md") {
+    margin-top: rem(41);
+  }
+}
+
+.sidebar__campaign-wrapper {
+  margin-top: rem(84);
+}
+
+.sidebar__campaign-wrapper--blog {
+  margin-top: rem(82);
 }
 
 .sidebar__campaign-cards {
@@ -135,10 +182,30 @@
   display: flex;
   flex-direction: column;
   gap: rem(43);
+
+  @include mq("md") {
+    gap: rem(47);
+  }
+}
+
+.sidebar__campaign-cards--blog {
+  gap: rem(53);
+}
+
+.sidebar__archive-wrapper {
+  margin-top: rem(84);
+}
+
+.sidebar__archive-wrapper--blog {
+  margin-top: rem(92);
+
+  @include mq("md") {
+    margin-top: rem(85);
+  }
 }
 
 .sidebar__archive-content {
-  margin-top: rem(29);
+  margin-top: rem(23);
   color: $green;
   font-size: rem(24);
   padding-left: rem(32);
@@ -153,7 +220,7 @@
 .sidebar__archive-year,
 .sidebar__archive-month {
   position: relative;
-  margin-top: rem(2);
+  margin-top: rem(3);
 }
 
 .sidebar__archive-year::after,
