--- a/src/sass/module/_contact-form.scss
+++ b/src/sass/module/_contact-form.scss
@@ -11,6 +11,7 @@
 
 .contact-form__form {
   width: 100%;
+  margin-top: rem(12);
 
   @include mq("md") {
     max-width: rem(700);
@@ -20,12 +21,12 @@
 
 .contact-form__item {
   display: flex;
-  padding: rem(24) 0;
+  padding: rem(23.5) 0;
   flex-direction: column;
 
   @include mq("md") {
     flex-direction: row;
-    padding: rem(40) 0;
+    padding: rem(39) 0;
   }
 }
 
@@ -41,12 +42,13 @@
 .contact-form__label span {
   display: inline-block;
   width: rem(61);
-  padding: rem(5);
   text-align: center;
   background-color: $red;
   color: $white;
   font-size: rem(12);
   margin-left: rem(8);
+  font-weight: $normal;
+  padding: rem(2) 0;
 }
 
 .contact-form__item {
@@ -73,7 +75,7 @@
   width: 100%;
   border: solid rem(1) $green;
   height: rem(40);
-  padding-left: rem(8);
+  padding-left: rem(16);
 
   @include mq("md") {
     max-width: rem(480);
@@ -82,9 +84,8 @@
   }
 }
 
-.contact-form__text.error {
-  border: solid rem(1) $red;
-  background-color: rgba($color: $red, $alpha: 0.2);
+.contact-form__text::placeholder {
+  color: $light-green;
 }
 
 .contact-form__textarea {
@@ -101,13 +102,8 @@
   }
 }
 
-.contact-form__textarea.error {
-  border: solid rem(1) $red;
-  background-color: rgba($color: $red, $alpha: 0.2);
-}
-
-.contact-form__checkboxes {
-  margin-top: rem(16);
+.contact-form__radios {
+  margin-top: rem(14);
   display: flex;
   flex-direction: column;
 
@@ -116,36 +112,65 @@
   }
 }
 
-input[type=checkbox] {
-  display: inline-block;
-  border: solid rem(1) $green;
-  width: rem(14);
-  height: rem(14);
-  cursor: pointer;
-  position: relative;
-}
-
-input[type="checkbox"]:checked:before {
-  position: absolute;
-  content: '';
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  display: block;
-  height: rem(8);
-  width: rem(14);
-  top: rem(2);
-  left: 0;
-  background-image: url(/assets/images/common/contact-form-check.png);
-}
-
-.contact-form__checkbox {
+.contact-form__radio {
   display: flex;
   align-items: center;
+  margin-top: rem(2);
 }
 
-.control input:checked+.control__indicator {
-  background: blue;
+.contact-form__label {
+  cursor: pointer;
+}
+
+.contact-form__radio-button {
+  position: absolute;
+  white-space: nowrap;
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  clip-path: inset(50%);
+  overflow: hidden;
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+}
+
+.contact-form__radio label {
+  position: relative;
+  cursor: pointer;
+  padding-left: rem(23);
+}
+
+.contact-form__radio label::before,
+.contact-form__radio label::after {
+  content: "";
+  display: block;
+  border-radius: 50%;
+  position: absolute;
+  transform: translateY(-50%);
+  top: 50%;
+}
+
+.contact-form__radio label::before {
+  background-color: $white;
+  border: 1px solid $green;
+  border-radius: 50%;
+  width: rem(14);
+  height: rem(14);
+  left: 0;
+}
+
+.contact-form__radio label::after {
+  background-color: $green;
+  border-radius: 50%;
+  opacity: 0;
+  width: rem(9);
+  height: rem(9);
+  left: rem(2.7);
+}
+
+.contact-form__radio-button:checked+label::after {
+  opacity: 1;
 }
 
 .contact-form__contents {
@@ -163,53 +188,62 @@ input[type="checkbox"]:checked:before {
   }
 }
 
-.contact-form__contents::after {
-  position: absolute;
-  content: '';
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  display: block;
-  height: rem(15);
-  width: rem(15);
-  top: rem(5);
-  right: rem(10);
-  background-image: url(/assets/images/common/contact-form-triangle.png);
-}
-
-.contact-form__select {
-  width: 100%;
-  height: inherit;
-  padding-left: rem(10);
-}
-
-.contact-form__content {
-  border: solid rem(1) $green;
-  font-size: rem(12);
-  padding: rem(16);
-
-}
-
-.contact-form__doui {
+.contact-form__agreement {
   margin: rem(40) auto 0;
   max-width: rem(280);
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: rem(14);
 
   @include mq("md") {
     margin-top: rem(80);
     max-width: none;
     text-align: center;
+    gap: rem(15);
   }
 }
 
-.contact-form__doui label {
+.contact-form__agreement label {
   word-break: keep-all;
   overflow-wrap: break-word;
   text-wrap: nowrap;
+}
 
+input[type=checkbox] {
+  width: rem(32);
+  height: rem(22);
+  margin-top: rem(-15);
+  display: inline-block;
+  border: solid rem(1) $green;
+  cursor: pointer;
+  position: relative;
+
+  @include mq("md") {
+    width: rem(22);
+    margin-top: rem(-2);
+    margin-left: rem(-2);
+  }
+}
+
+input[type="checkbox"]:before {
+  opacity: 0;
+}
+
+input[type="checkbox"]:checked:before {
+  opacity: 1;
+  position: absolute;
+  content: '';
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: block;
+  height: rem(8);
+  width: rem(14);
+  top: rem(6);
+  left: rem(3);
+  background-image: url(/assets/images/common/contact-form-check.png);
 }
 
 .contact-form__btn-wrapper {
@@ -221,8 +255,39 @@ input[type="checkbox"]:checked:before {
   }
 }
 
-.contact-form__text::placeholder {
-  color: $light-green;
+input[type=checkbox] {
+  width: rem(32);
+  height: rem(22);
+  margin-top: rem(-15);
+  display: inline-block;
+  border: solid rem(1) $green;
+  cursor: pointer;
+  position: relative;
+
+  @include mq("md") {
+    width: rem(22);
+    margin-top: rem(-2);
+    margin-left: rem(-2);
+  }
+}
+
+input[type="checkbox"]:before {
+  opacity: 0;
+}
+
+input[type="checkbox"]:checked:before {
+  opacity: 1;
+  position: absolute;
+  content: '';
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: block;
+  height: rem(8);
+  width: rem(14);
+  top: rem(6);
+  left: rem(3);
+  background-image: url(/assets/images/common/contact-form-check.png);
 }
 
 //エラー
@@ -241,16 +306,61 @@ input[type="checkbox"]:checked:before {
   }
 }
 
+.contact-form__error-texts {
+  color: $red;
+  font-size: rem(14);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+
+  @include mq("md") {
+    flex-direction: row;
+    justify-content: center;
+  }
+}
+
 .contact-form__error-text {
   display: none;
 }
 
 .contact-form__error-text:nth-child(2) {
   text-indent: rem(14);
+  margin-left: rem(-86);
 
   @include mq("md") {
     text-indent: rem(0);
+    margin-left: 0;
   }
+}
+
+.contact-form__error {
+  background-color: rgba($color: $red, $alpha: 0.2);
+  border: solid rem(1) $red;
+  margin-top: rem(16);
+  width: 100%;
+  height: rem(40);
+  padding-left: rem(16);
+  font-size: rem(16);
+
+  @include mq("md") {
+    max-width: rem(480);
+    margin-top: 0;
+    width: 71%;
+  }
+}
+
+.contact-form__error::placeholder {
+  color: $white;
+}
+
+.contact-form__text.error {
+  border: solid rem(1) $red;
+  background-color: rgba($color: $red, $alpha: 0.2);
+}
+
+.contact-form__textarea.error {
+  border: solid rem(1) $red;
+  background-color: rgba($color: $red, $alpha: 0.2);
 }
 
 //お問い合わせ完了
@@ -275,13 +385,4 @@ input[type="checkbox"]:checked:before {
   text-wrap: nowrap;
   line-height: 1.44;
 
-}
-
-.contact-form__error {
-  background-color: rgba($color: $red, $alpha: 0.2);
-  border: solid rem(1) $red;
-}
-
-.contact-form__error::placeholder {
-  color: $white;
 }
