--- a/src/sass/module/_contact-form.scss
+++ b/src/sass/module/_contact-form.scss
@@ -188,6 +188,36 @@
   }
 }
 
+
+.contact-form__contents::after {
+  position: absolute;
+  top: rem(13);
+  right: rem(16);
+  content: "";
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url(/assets/images/common/contact-form-triangle.png);
+  display: block;
+  height: rem(12);
+  width: rem(12);
+
+  @include mq("md") {
+    top: rem(7);
+  }
+
+}
+
+.contact-form__select {
+  font-size: rem(12);
+  padding: rem(10) 0 rem(10) rem(16);
+  width: 100%;
+
+  @include mq("md") {
+    padding: rem(5) 0 rem(5) rem(16);
+  }
+}
+
 .contact-form__agreement {
   margin: rem(40) auto 0;
   max-width: rem(280);
@@ -253,41 +283,6 @@ input[type="checkbox"]:checked:before {
   @include mq("md") {
     margin-top: rem(40);
   }
-}
-
-input[type=checkbox] {
-  width: rem(32);
-  height: rem(22);
-  margin-top: rem(-15);
-  display: inline-block;
-  border: solid rem(1) $green;
-  cursor: pointer;
-  position: relative;
-
-  @include mq("md") {
-    width: rem(22);
-    margin-top: rem(-2);
-    margin-left: rem(-2);
-  }
-}
-
-input[type="checkbox"]:before {
-  opacity: 0;
-}
-
-input[type="checkbox"]:checked:before {
-  opacity: 1;
-  position: absolute;
-  content: '';
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  display: block;
-  height: rem(8);
-  width: rem(14);
-  top: rem(6);
-  left: rem(3);
-  background-image: url(/assets/images/common/contact-form-check.png);
 }
 
 //エラー
