--- a/src/sass/module/_tabs.scss
+++ b/src/sass/module/_tabs.scss
@@ -4,9 +4,11 @@
   display: flex;
   row-gap: rem(16);
   column-gap: rem(21);
+  flex-wrap: wrap;
+  justify-content: center;
 
   @include mq("md") {
-
+    justify-content: start;
     column-gap: rem(32);
   }
 }
