--- a/src/sass/module/_tab.scss
+++ b/src/sass/module/_tab.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-.tab {
+/*.tab {
     display: inline-block;
     padding: rem(6) 0;
     width: rem(162);
@@ -20,4 +20,4 @@
 .tab.is-button-active {
     background: $green;
     color: $white;
-}
+}*/
