--- a/src/sass/module/_site-map.scss
+++ b/src/sass/module/_site-map.scss
@@ -73,6 +73,8 @@
   margin-left: rem(22);
   margin-top: rem(24);
   line-height: 1.125;
+  word-break: keep-all;
+  overflow-wrap: break-word;
 }
 
 //PCの時並べ替え
