--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -21,6 +21,7 @@ $title-font-family: "Gotu", sans-serif;
 body {
   font-family: $base-font-family;
   color: #0d2936;
+  scroll-padding-top: rem(100);
 }
 
 // フォントウェイト
