--- a/src/sass/module/_sidebar.scss
+++ b/src/sass/module/_sidebar.scss
@@ -1,40 +1,11 @@
 @use "global" as *;
 
-.sidebar-wrapper {
-  margin-top: rem(80);
-  width: 100%;
-
-  @include mq("md") {
-    margin-top: rem(149);
-    width: 65%;
-  }
-}
-
-.sidebar-wrapper--blog-article {
-  @include mq("md") {
-    margin-top: rem(149);
-    width: 40%;
-  }
-}
-
 .sidebar__inner {
   padding: 0 rem(24);
 
   @include mq("md") {
     padding: 0 0 0 rem(14);
   }
-}
-
-.sidebar__inner-blog {
-  padding: 0 rem(23);
-
-  @include mq("md") {
-    padding: 0 0 0 rem(14);
-  }
-}
-
-.sidebar {
-  width: 100%;
 }
 
 .sidebar__title {
@@ -214,6 +185,32 @@
 .sidebar__archive-months {
   display: none;
   padding-left: rem(25);
+}
+
+.sidebar__archive-month {
+  display: block;
+  width: fit-content;
+  position: relative;
+  margin-top: rem(3);
+}
+
+.sidebar__archive-month::before {
+  background: $green;
+  content: '';
+  width: 100%;
+  height: rem(2);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  margin: auto;
+  transform-origin: right top;
+  transform: scale(0, 1);
+  transition: transform .3s;
+}
+
+.sidebar__archive-month:hover::before {
+  transform-origin: left top;
+  transform: scale(1, 1);
 }
 
 //アーカイブ三角
