--- a/src/sass/module/_blog-article.scss
+++ b/src/sass/module/_blog-article.scss
@@ -1,13 +1,10 @@
 @use "global" as *;
 
 .blog-article {
-    position: relative;
-    margin-top: rem(43);
     width: 100%;
 
     @include mq("md") {
-        margin-top: rem(147);
-        width: 92%;
+        width: 65%;
     }
 
 }
@@ -44,28 +41,8 @@
     }
 }
 
-.blog-article::before {
-    position: absolute;
-    content: "";
-    display: block;
-    background-image: url(/assets/images/common/decoration-fish-right.svg);
-    top: rem(-16);
-    left: calc(50% - min(46.4vw, 11rem));
-    max-width: rem(122);
-    width: 100%;
-    height: rem(56);
-    background-size: contain;
-    background-repeat: no-repeat;
-
-    @include mq("md") {
-        top: rem(-71);
-        left: calc(50% - min(29.8vw, 26.8rem));
-        max-width: rem(301);
-        height: rem(138);
-    }
-}
-
-.blog-article__img {
+.blog-article__thumbnail,
+.blog-article__content figure {
     margin-top: rem(24);
 
     @include mq("md") {
@@ -73,7 +50,7 @@
     }
 }
 
-.blog-article__text {
+.blog-article__content p {
     margin-top: rem(24);
 
     @include mq("md") {
@@ -81,7 +58,7 @@
     }
 }
 
-.blog-article__lists {
+.blog-article__content ul {
     margin-top: rem(24);
 
     @include mq("md") {
@@ -89,13 +66,13 @@
     }
 }
 
-.blog-article__list {
+.blog-article__content li {
     position: relative;
     padding-left: rem(28);
     margin-top: rem(5);
 }
 
-.blog-article__list::before {
+.blog-article__content li::before {
     position: absolute;
     content: "";
     display: block;
