--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -37,9 +37,13 @@
   object-fit: cover;
 }
 
-.blog-card__img:hover {
-  transform: scale(1.2, 1.2);
-  transition: ease 0.5s all;
+.blog-cards__item:hover .blog-card__img {
+  transform: scale(1.1);
+  transition: transform 0.3s ease;
+}
+
+.blog-card__img {
+  transition: transform 0.3s ease;
 }
 
 .blog-card__body {
@@ -59,7 +63,6 @@
   flex-shrink: 0;
   padding-bottom: rem(3);
 
-  @include mq("md") {}
 }
 
 .blog-card__text {
