--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -1,18 +1,21 @@
 @use "global" as *;
+
 //ヘッダー全体
 .header {
   position: fixed;
   width: 100%;
   height: rem(80);
   background-color: rgba($color: $black, $alpha: 0.68);
-  z-index: 9999;
+  z-index: 500;
   overscroll-behavior-y: contain;
   top: 0;
   left: 0;
+
   @include mq("md") {
     height: rem(90);
   }
 }
+
 //ヘッダーインナー
 .header__inner {
   height: inherit;
@@ -22,6 +25,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+
   @include mq("md") {
     width: 100%;
     margin: 0 auto;
@@ -29,15 +33,18 @@
     height: inherit;
   }
 }
+
 //ヘッダーロゴ
 .header__logo {
   width: rem(102);
   height: auto;
+
   @include mq("md") {
     width: rem(133);
     height: auto;
   }
 }
+
 //ヘッダー日本語タイトル
 @include mq("md") {
   .header__titles-japanese {
@@ -48,6 +55,7 @@
     text-align: center;
   }
 }
+
 //ヘッダー英語タイトル
 @include mq("md") {
   .header__titles-english {
@@ -58,27 +66,32 @@
     text-align: center;
   }
 }
+
 //ヘッダー中身、クリック領域広げる
 @include mq("md") {
   .header__content {
     height: inherit;
   }
 }
+
 //ヘッダーpc-nav
 .header__pc-nav {
   display: none;
 }
+
 @include mq("md") {
   .header__pc-nav {
     display: block;
     height: inherit;
   }
+
   .header__pc-nav ul {
     display: flex;
     flex-direction: row;
     gap: rem(40);
     height: inherit;
   }
+
   .header__pc-nav li {
     display: inline-block;
     height: inherit;
@@ -107,23 +120,28 @@
     background: $white;
     transition: all 0.3s;
     transform: scale(0, 1);
-    transform-origin: center top; /*上部中央基点*/
+    transform-origin: center top;
+    /*上部中央基点*/
   }
+
   /*現在地とhoverの設定*/
   .header__pc-nav li.current a::after,
   .header__pc-nav li a:hover::after {
     transform: scale(1, 1);
   }
 }
+
 .header__site-map-wrapper {
   width: 100%;
   height: -webkit-fill-available;
   overflow-y: scroll;
   overscroll-behavior: contain;
+
   @include mq("md") {
     display: none;
   }
 }
+
 //スクロールバーを出すところと分けたかったため、innerとwrapperを分けた
 .header__site-map-inner {
   max-width: rem(540);
@@ -131,6 +149,7 @@
   margin: 0 auto;
   padding: 0 rem(15);
 }
+
 //ヘッダーSP-nav
 .header__sp-nav {
   display: none;
@@ -140,10 +159,12 @@
   padding-top: rem(104);
   width: 100%;
   height: 100vh;
+
   @include mq("md") {
     display: none;
   }
 }
+
 //sp-navの中身
 .header__site-map {
   height: calc(100vh - rem(80));
@@ -151,6 +172,7 @@
   max-width: rem(500);
   column-gap: rem(8);
 }
+
 //ハンバーガーメニュー
 .header__hamburger {
   position: relative;
@@ -158,6 +180,7 @@
   height: rem(24);
   cursor: pointer;
 }
+
 .header__hamburger span {
   position: absolute;
   left: 0;
@@ -165,18 +188,22 @@
   height: rem(1);
   background-color: $white;
 }
+
 .header__hamburger,
 .header__hamburger span {
   display: inline-block;
   transition: all 0.5s;
   box-sizing: border-box;
 }
+
 .header__hamburger span:nth-of-type(1) {
   top: rem(1);
 }
+
 .header__hamburger span:nth-of-type(2) {
   top: rem(14);
 }
+
 .header__hamburger span:nth-of-type(3) {
   bottom: rem(-2);
 }
@@ -188,9 +215,11 @@
   width: rem(41);
   left: rem(-5);
 }
+
 #js-hamburger.active span:nth-of-type(2) {
   opacity: 0;
 }
+
 #js-hamburger.active span:nth-of-type(3) {
   -webkit-transform: translateY(rem(-11)) rotate(-37deg);
   transform: translateY(rem(-11)) rotate(-37deg);
@@ -198,6 +227,7 @@
   width: rem(41);
   left: rem(-5);
 }
+
 @include mq("md") {
   .header__hamburger {
     display: none;
