--- a/src/sass/module/_price.scss
+++ b/src/sass/module/_price.scss
@@ -1,114 +1,12 @@
 @use "global" as *;
 
-.price__menu {
-  width: 100%;
-  margin-top: rem(38);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-  @include mq("md") {
-    margin-top: rem(70);
-    flex-direction: row;
-  }
-}
-
-.price__menu:first-child {
-  margin-top: 0;
-}
-
-.price__title-wrapper {
-  background-color: $green;
-  display: flex;
-  flex-direction: row-reverse;
-  gap: rem(8);
-  color: $white;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  padding: rem(8) 0;
-  max-width: rem(540);
-  height: auto;
-
-
-  @include mq("md") {
-    padding: 0;
-    max-width: rem(200);
-    flex-direction: column;
-  }
-}
-
-.price__title {
-  text-align: center;
-  font-size: rem(16);
-}
-
-.price__title-img {
-  width: rem(24);
-
-  @include mq("md") {
-    width: rem(64);
-    margin: rem(8) auto 0;
-  }
-}
-
-.price__lists {
-  width: 100%;
-  max-width: rem(540);
-  align-items: center;
-
-  @include mq("md") {
+.price__inner {
+    max-width: rem(540);
     width: 100%;
-    max-width: rem(502);
-  }
-}
+    margin: 0 auto;
 
-.price__list {
-  display: flex;
-  flex-direction: row;
-  border: solid rem(1) $green;
-  align-items: center;
-}
-
-.price__list:not(:first-child) {
-  border-top: none;
-}
-
-.price__name {
-  width: 69%;
-  text-align: center;
-  text-wrap: nowrap;
-
-  @include mq("md") {
-    padding: rem(18) rem(16);
-    text-align: start;
-    width: 68%;
-  }
-}
-
-.price__yen {
-  width: 31%;
-  text-align: end;
-  border-left: solid rem(1) $green;
-  padding: rem(18) rem(16);
-
-  @include mq("md") {
-    width: 32%;
-  }
-}
-
-.price-pc-none {
-  display: block;
-
-  @include mq("md") {
-    display: none;
-  }
-}
-
-//ページ内リンク余白調整
-.price__anchor {
-  display: block;
-  position: relative;
-  top: rem(-100);
-  visibility: hidden;
+    @include mq("md") {
+        max-width: rem(740);
+        width: 100%;
+    }
 }
