--- a/src/sass/page/_blog-layout.scss
+++ b/src/sass/page/_blog-layout.scss
@@ -1,25 +1,24 @@
 @use "global" as *;
 
 .blog-layout {
-  max-width: rem(366);
-}
-
-.blog-layout__2column {
   position: relative;
   display: flex;
   flex-direction: column;
+  margin-top: rem(52);
 
   @include mq("md") {
     flex-direction: row;
+    margin-top: rem(150);
+    gap: calc(100% - (65% + 27%));
   }
 }
 
-.blog-layout__2column::before {
+.blog-layout::before {
   position: absolute;
   content: "";
   display: block;
   background-image: url(/assets/images/common/decoration-fish-right.svg);
-  top: rem(27);
+  top: rem(-50);
   left: calc(50% - min(45.5vw, 10.7rem));
   max-width: rem(117);
   width: 100%;
@@ -29,7 +28,7 @@
   z-index: -1;
 
   @include mq("md") {
-    top: rem(79);
+    top: rem(-50);
     left: calc(50% - min(43.1vw, 38.8rem));
     max-width: rem(301);
     height: rem(138);
