--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -29,7 +29,7 @@ dd {
 /* Set core root defaults */
 html {
   scroll-behavior: smooth;
-  scroll-padding-top: rem(100);
+  scroll-padding-top: 6.25rem;
 }
 
 /* Set core body defaults */
