--- a/src/sass/module/_blog.scss
+++ b/src/sass/module/_blog.scss
@@ -2,9 +2,12 @@
 
 .blog {
   width: 100%;
+  max-width: rem(540);
+  margin: 0 auto;
 
   @include mq("md") {
     width: 65%;
+    max-width: none;
   }
 
 }
