--- a/src/sass/page/_sidebar-wrapper.scss
+++ b/src/sass/page/_sidebar-wrapper.scss
@@ -3,8 +3,11 @@
 .sidebar-wrapper {
     margin-top: rem(80);
     width: 100%;
+    max-width: rem(400);
+    margin: 0 auto;
 
     @include mq("md") {
+        max-width: none;
         margin-top: 0;
         width: 27.2%;
     }
